--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background: 223 49% 8%;
-    --foreground: 222.2 84% 4.9%;
+    --foreground: 360 100% 100%;
 
     --muted: 217 26% 17%;
 
@@ -22,10 +22,10 @@
     --sidebar: 221 50% 11%;
 
     --primary: 281 52% 55%;
-    --primary-foreground: 281% 52% 55%;
+    --primary-foreground: 360 100% 100%;
 
     --secondary: 217 26% 17%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary-foreground: 360 100% 100%;
 
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
@@ -44,7 +44,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-base;
     font-family: "Roboto", sans-serif;
   }
 }
