--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,36 +4,35 @@
 
 @layer base {
   :root {
-    --background: 223 49% 8%;
-    --foreground: 360 100% 100%;
+    --background: #0b1120;
+    --foreground: 221.5 30.2% 91.6%;
 
-    --muted: 217 26% 17%;
+    --muted: #202937;
+    --muted-foreground: 215 20.2% 65.1%;
 
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --popover: 0 0% 55.3%;
+    --popover-foreground: 221.5 30.2% 91.6%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --card: #0e172a;
+    --card-foreground: 221.5 30.2% 91.6%;
 
-    --card: 221 50% 11%;
-    --card-foreground: 222.2 84% 4.9%;
+    --border: #202937;
+    --input: #202937;
+    --sidebar: #0e172a;
 
-    --border: 217 26% 17%;
-    --input: 217 26% 17%;
-    --sidebar: 221 50% 11%;
+    --primary: #a252c8;
+    --primary-foreground: #f5f5f5;
 
-    --primary: 281 52% 55%;
-    --primary-foreground: 360 100% 100%;
+    --secondary: #202937;
+    --secondary-foreground: 221.5 30.2% 91.6%;
 
-    --secondary: 217 26% 17%;
-    --secondary-foreground: 360 100% 100%;
+    --accent: 221.5 30.2% 91.6%;
+    --accent-foreground: 221.5 30.2% 91.6%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 221.5 30.2% 91.6%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 217 26% 17%;
+    --ring: #202937;
 
     --radius: 0.5rem;
   }
@@ -44,7 +43,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-base;
-    font-family: "Roboto", sans-serif;
+    @apply bg-background text-foreground text-base;
+    font-family: "Lato", sans-serif;
   }
 }
